# BelegarbeitProgrammierkonzepte

./: CMakeLists.txt  beispiel.cpp  beispiel2.cpp  main.cpp  mpi.cpp  mpi_10_natureMega.csv  mpi_2_natureMega.csv  mpi_4_natureMega.csv  mpi_6_natureMega.csv  mpi_8_diceMicro.csv  mpi_8_haroldMedium.csv  mpi_8_natureMega.csv  mpi_8small_natureMega.csv  omp.cpp  omp_10_natureMega.csv  omp_128_natureMega.csv  omp_12_natureMega.csv  omp_16_natureMega.csv  omp_256_natureMega.csv  omp_2_natureMega.csv  omp_32_natureMega.csv  omp_4_natureMega.csv  omp_64_natureMega.csv  omp_6_natureMega.csv  omp_8_diceMicro.csv  omp_8_haroldMedium.csv  omp_8_natureMega.csv  omp_8small_natureMega.csv  seriell.cpp  seriell.h  seriell_diceMicro.csv  seriell_haroldMedium.csv  seriell_natureMega.csv
MPI/: main.cpp
OMP/: main.cpp
SERIAL/: main.cpp
